# wreq-rb

./: .gitignore  .gitmodules  Cargo.toml  Gemfile  README.md  Rakefile  wreq-rb.gemspec  wreq.gemspec
.github/workflows/: ci.yml  release.yml
exe/: wreq
ext/wreq_rb/: Cargo.toml  extconf.rb
ext/wreq_rb/src/: client.rs  error.rs  lib.rs  response.rs
lib/: wreq-rb.rb  wreq.rb
lib/wreq-rb/: version.rb
patches/: 0001-add-transfer-size-tracking.patch  0002-add-cancel-connections.patch
test/: client_test.rb  emulation_test.rb  request_test.rb  response_test.rb  test_helper.rb  thread_safety_test.rb  wreq_test.rb
